# cpp-bare-cli

./: CMakeLists.txt  readme.md
src/: main.cpp
src/classes/: console.cpp  console.h  interpreter.cpp  interpreter.h
src/config/: cli.h
src/enums/: inputending.h
src/exceptions/: exception.cpp  exception.h  invalidinput.cpp  invalidinput.h
src/impl/: impl.cpp  impl.h
src/structs/: config.h
